add open graph image to homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: Home
+title: bpaulino.com
+author: Bruno Paulino
+meta_image: /assets/images/home_cover.jpg
 ---
 <div class="entries-container">
     <div class="entries-center-wrapper">
